# openglwindow

./: CHANGELOG.txt  CMakeLists.txt  README.txt  openglwindowwriteup.odt
allegro/: CMakeLists.txt
allegro/include/: openglallegro.h
allegro/src/: CMakeLists.txt  openglallegro.cpp
datagen/: CMakeLists.txt
datagen/include/: commonheader.h  openglwindow.h
datagen/src/: CMakeLists.txt  openglwindow.cpp
glfw3/: CMakeLists.txt
glfw3/include/: openglglfw3.h  threadcreate.h
glfw3/src/: CMakeLists.txt  openglglfw3.cpp
glut/: CMakeLists.txt
glut/include/: openglglut.h
glut/src/: CMakeLists.txt  openglglut.cpp  threadcreate.cpp
openglresources/objects/: dice.blend  dice.blend1
openglresources/shaders/: diffspecbinorm.frag  diffspecbinorm.vs  objects.frag  objects.vs  skyboxshader.frag  skyboxshader.vs
openglwindow/: CMakeLists.txt
openglwindow/include/: windowspawn.h
openglwindow/src/: CMakeLists.txt  windowspawn.cpp
sdl2/: CMakeLists.txt
sdl2/include/: openglsdl2.h
sdl2/src/: CMakeLists.txt  openglsdl2.cpp
sfml/: CMakeLists.txt
sfml/include/: openglsfml.h  threadcreate.h
sfml/src/: CMakeLists.txt  openglsfml.cpp
