############################################################
#   The CMake File for OpenGLAllegro.  
#   Created by Edward C. Eberle <eberdeed@ebedeed.net>
#   March 2020 San Diego California USA
############################################################
cmake_minimum_required(VERSION 3.12)
project(openglallego)
add_subdirectory(src)
