############################################################
#   The CMake File for OpenGLSFML.
#   Created by Edward C. Eberle <eberdeed@ebedeed.net>
#   March 2020 San Diego California USA
############################################################
cmake_minimum_required(VERSION 3.12)
project(openglsfml)
add_subdirectory(src)
